# cathpathfinder

./: .dockerignore  .gitignore  AlgoDinamicWithVal.py  AlgoDynamic.py  Dockerfile  README.md  debug_max_lev.py  docker-compose.yml  example.ipynb  extract_pdb_sequences.py  make_layer2.py  merge_trajectory_layers.py  pytest.ini  run.sh  run_esmfold_batch.py  run_layers.py  run_pair_validations.py  run_trajectory_layers.py
cath_nn_lev_lib/: pyproject.toml  setup.py
cath_nn_lev_lib/.ipynb_checkpoints/: README-checkpoint.md
cath_nn_lev_lib/cath_nn_lev/: __init__.py
cath_nn_lev_lib/cath_nn_lev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cath_nn_lev_lib/src/: cath_nn_lev.c  fasta.c  fasta.h  kmer_index.c  kmer_index.h  levenshtein.c  levenshtein.h  pipeline.c  pipeline.h  topm.c  topm.h  util.c  util.h
cath_nn_lev_lib/tests/: test_small.py
cath_nn_lev_lib/tests/data/: toy.fasta
datasetgradualstep_c/: README.md  __init__.py  datasetgradualstep_c.c  example.ipynb  example_1.ipynb  setup.py
deploy/: 00-system-deps-debian.sh  01-install-mambaforge.sh  02-create-envs.sh  03-install-project.sh  README.md  activate_esmfold.sh  activate_ssg.sh  env_esmfold.yml  env_ssg.yml
docker/: entrypoint.sh
iupred3/: iupred3.py  iupred3_lib.py
layer_outputs/: directed.tsv  directed10.tsv  directed11.tsv  directed12.tsv  directed13.tsv  directed14.tsv  directed15.tsv  directed16.tsv  directed17.tsv  directed18.tsv  directed19.tsv  directed2.tsv  directed20.tsv  directed21.tsv  directed22.tsv  directed23.tsv  directed3.tsv  directed4.tsv  directed5.tsv  directed6.tsv  (+48 more)
(+2 files in other folders)
